[package]
name = "bevyPlayground"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
bevy = { version = "0.15.1" }

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

