[package]
name = "fluid-simulation-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
bevy = { version = "0.15.1" }
colorgrad = "0.7.0"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = false