[package]
name = "fluid-simulation-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
bevy = { version = "0.15.1" }
colorgrad = "0.7.0"
egui = "0.30.0"
bevy_egui = "0.32.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
bevy-tokio-tasks = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.120"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = false